# Extermination

./: tape_detection.py
OldCode/: .gitignore  CMakeLists.txt  README.md  package.xml
OldCode/config/: params.yaml
OldCode/old/: led_actuator_v2.py  sprayer_arrow_test.py
OldCode/rviz/: sim.rviz
OldCode/scripts/: agrobot_ros_arduino.ino  image_rec_sim_ordered.py  leds.py  sprayers.py
OldCode/urdf/: robot.xacro
agrobot_arduino_vavle_control_test/: agrobot_arduino_vavle_control_test.ino  valve_control_test.py
launch/: extermination_control.launch  rpi.launch  rpi_calibration.launch  rpi_sim.launch  sim_environment.launch
old/: arrow.cpp  button_publisher_v2.py  chassis_frame_broadcaster.cpp  sprayer_aim_animator.py  write_angles.py
pyfirmata_part/: pick_led.py
scripts/: agrobot_ros_arduino.ino  image_rec_sim.py  navigation_sim.py  sprayers_leds.py  weed_sorting.py
urdf/: chassis.urdf
